--- a/app/src/main/res/layout/activity_actrepaso.xml
+++ b/app/src/main/res/layout/activity_actrepaso.xml
@@ -28,6 +28,7 @@
         android:layout_height="wrap_content"
         android:onClick="Unida1"
         android:text="@string/Unidad1"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/button7"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,6 +42,7 @@
         android:layout_height="wrap_content"
         android:onClick="Unidad2"
         android:text="@string/Unidad2"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/button8"
         app:layout_constraintEnd_toEndOf="parent"
@@ -54,6 +56,7 @@
         android:layout_height="wrap_content"
         android:onClick="Unidad3"
         android:text="@string/Unidad3"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
