--- a/app/src/main/res/layout/activity_entretenimiento.xml
+++ b/app/src/main/res/layout/activity_entretenimiento.xml
@@ -28,6 +28,7 @@
                 android:layout_height="wrap_content"
                 android:onClick="Video"
                 android:text="@string/Ent_vid"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textSize="24sp" />
 
             <TableLayout
@@ -73,6 +74,7 @@
                         android:layout_height="150dp"
                         android:onClick="BBC"
                         android:text="@string/Quepasa"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                         android:textSize="24sp" />
                 </TableRow>
 
